# dashline

./: .gitignore  Cargo.toml  README.md
dashline-api/: Cargo.toml
dashline-api/src/: main.rs
dashline-cli/: Cargo.toml
dashline-cli/src/: main.rs
dashline-data/: Cargo.toml
dashline-data/migrations/2022-03-27-000950_create_pilot/: down.sql  up.sql
dashline-data/migrations/2022-03-27-001443_create_leg/: down.sql  up.sql
dashline-data/migrations/2022-03-27-001948_create_flight/: down.sql  up.sql
dashline-data/src/: entity.rs  lib.rs  model.rs  schema.rs  service.rs
